# ggrepel-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
docs/tutorials/: examples_v2.ipynb  ggrepel.ipynb
ggrepel_py/: __init__.py  _options.py  _utilities.py  data.py  geom_label_repel.py  geom_text_repel.py  position_nudge_repel.py
ggrepel_py/_repel/: __init__.py  repel_boxes.cpp
tests/: conftest.py  test_audit_fixes.py  test_coverage_gaps.py  test_from_r.py  test_geom_label_repel.py  test_geom_text_repel.py  test_position_nudge_repel.py  test_slice0_build.py  test_utilities.py
tutorials/: examples_v1.ipynb  examples_v2.ipynb  ggrepel.ipynb
